# QRGuardPro

./: CMakeLists.txt  DataHarvester.cpp  DataHarvester.h  MainWindow.cpp  MainWindow.h  QRCodeGenerator.cpp  QRCodeGenerator.h  QRCodeScanner.cpp  QRCodeScanner.h  README.md  SafetyEvaluator.cpp  SafetyEvaluator.h  main.cpp  setup.sh
docs/: Doxyfile.in
docs/source/: conf.py
include/: DataHarvester.h  MainWindow.h  QRCodeGenerator.h  QRCodeScanner.h  SafetyEvaluator.h
src/: CMakeLists.txt  DataHarvester.cpp  MainWindow.cpp  QRCodeGenerator.cpp  QRCodeScanner.cpp  SafetyEvaluator.cpp  main.cpp
tests/: CMakeLists.txt  README.md  test_QRCodeGenerator.cpp  test_QRCodeScanner.cpp  test_main.cpp
